# adaptive-learning-kt

./: .gitignore  .quartoignore  CLAUDE.md  Makefile  README.md  _quarto.yml  index.qmd  pyproject.toml
_freeze/notebooks/00-setup-check/execute-results/: html.json
_freeze/notebooks/01-eda/execute-results/: html.json
_freeze/notebooks/02-irt-bkt/execute-results/: html.json
docs/: README.html  generate_figures.py  index.html  search.json
docs/notebooks/: 01-eda.html  02-irt-bkt.html  02-irt-bkt.qmd
notebooks/: 00-setup-check.qmd  01-eda.qmd  02-irt-bkt.qmd
src/data/: __init__.py  download.py  ednet.py  sample.py
src/eval/: __init__.py  metrics.py
src/features/: __init__.py  preprocess.py
src/models/: __init__.py  bkt.py  irt.py
tests/: conftest.py  test_bkt.py  test_download.py  test_ednet.py  test_irt.py  test_metrics.py  test_preprocess.py  test_sample.py
