[project]
name = "adaptive-learning-kt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=6.0.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "mlflow>=1.27.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "polars>=1.40.0",
    "pykt-toolkit",
    "seaborn>=0.13.2",
    "torch>=2.2",
]

[tool.uv.sources]
pykt-toolkit = { git = "https://github.com/pykt-team/pykt-toolkit" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
