[project]
name = "adaptive-learning-kt"
version = "0.1.0"
description = "Knowledge Tracing benchmark on EdNet-KT1: IRT / BKT / DKT / SAKT / SimpleKT and item-selection policy simulation"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "altair>=6.0.0",
    "gdown>=5.2",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "matplotlib>=3.10.8",
    "mlflow>=1.27.0",
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "polars>=1.40.0",
    "pyarrow>=18.0",
    "pybkt>=1.4,<1.4.2",
    "pymc>=5.16",
    "pytorch-lightning>=2.4",
    "scikit-learn>=1.5",
    "seaborn>=0.13.2",
    "torch>=2.2",
    "torchmetrics>=1.5",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
mypy_path = "."
namespace_packages = true
explicit_package_bases = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "pyBKT.*",
    "pymc.*",
    "mlflow.*",
    "pybkt.*",
    "seaborn.*",
    "altair.*",
    "tqdm.*",
    "sklearn.*",
    "gdown.*",
]
ignore_missing_imports = true

# Pyrefly (Positron/VS Code) — explicitly root at the project dir so
# `src.data.download` resolves instead of Pyrefly inferring `src/` as the import root.
[tool.pyrefly]
project-includes = ["src", "tests"]
search-path = ["."]
python-version = "3.11"

# Pyright / basedpyright — same fix, different tool.
[tool.pyright]
include = ["src", "tests"]
extraPaths = ["."]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
